Bug #28932 - Query builder row alignment on Google Chrome
- Fixed alignment issues for Google Chrome and Firefox. It's now pixel perfect

--- a/packages/common-ui/common-ui-style.scss
+++ b/packages/common-ui/common-ui-style.scss
@@ -112,7 +112,6 @@ input[type="number"]::-webkit-outer-spin-button {
 
 .rule--header {
   position: relative;
-  top: -2px;
   opacity: 1 !important;
 }
 
@@ -126,23 +125,21 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .rule--field {
+  float: left;
   min-width: 200px;
   width: 40%;
-  display: inline-block !important;
 }
 
 .rule--operator {
+  float: left;
   min-width: 200px;
   width: 20%;
-  display: inline-block !important;
 }
 
 .rule--value {
-  position: relative;
+  float: left;
   min-width: 200px;
-  top: -5px;
   width: calc(40% - 15px);
-  display: inline-block !important;
 }
 
 .rule--widget, .widget--widget {
